--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^4.3.0",
     "firebase": "^11.6.0",
     "jwt-decode": "^4.0.0",
     "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
